- finished AboutWindow - started work on PropertiesWindow

--- a/src/components/AboutWindow/AboutWindow.module.css
+++ b/src/components/AboutWindow/AboutWindow.module.css
@@ -40,6 +40,17 @@
 .middle {
   display: flex;
   align-items: flex-start;
+  gap: 12px;
+
+  margin-top: 20px;
+}
+
+.gap {
+  width: 100%;
+  height: 20px;
+}
+.gap--big {
+  height: 46px;
 }
 
 .button {
