- changed names of clearPrimary and changeZoom functions in CanvasContext to be more consistent   - moved two effects, as well as two refs from Canvas to CanvasContext   - removed some pointless prop passing in Canvas and it's hooks   - moved lastPointerPositionRef, lastCanvasZoomRef to CanvasContext, lastCurrentToolRef to ToolContext from CanvasContext   - fixed bug in Fill tool, trying to read unavailable thumbnail context   - minor changes to doSaveFile in ActionsContext and setting fileData in ImageInput

--- a/src/components/ThumbnailWindow/ThumbnailWindow.module.css
+++ b/src/components/ThumbnailWindow/ThumbnailWindow.module.css
@@ -13,4 +13,9 @@
   position: absolute;
   top: 0;
   left: 0;
+
+  display: block;
+  
+  image-rendering: pixelated;
+  image-rendering: crisp-edges;
 }
