- moved effect that redraws selection when its size changes from useSelection to SelectionContext   - fixed bug in Fill and ColorPicker (still using currentZoom instead of canvasZoom) - work on ThumbnailWindow:

--- a/src/components/ThumbnailWindow/ThumbnailWindow.module.css
+++ b/src/components/ThumbnailWindow/ThumbnailWindow.module.css
@@ -19,3 +19,9 @@
   image-rendering: pixelated;
   image-rendering: crisp-edges;
 }
+
+.canvas--selection {
+  border: 1px dashed rgb(0, 120, 215);
+  background-color: rgb(255, 0, 255);
+  box-sizing: border-box;
+}
