- doHistoryAdd now creates copy of element on it's own, so it can be passed original element   - moved some actions performed on primary and secondary canvas to functions in CanvasContext   - selection in ThumbnailWindow now works properly for all zoom levels

--- a/src/components/ThumbnailWindow/ThumbnailWindow.module.css
+++ b/src/components/ThumbnailWindow/ThumbnailWindow.module.css
@@ -22,6 +22,6 @@
 
 .canvas--selection {
   border: 1px dashed rgb(0, 120, 215);
-  background-color: rgb(255, 0, 255);
+  /* background-color: rgb(255, 0, 255); */
   box-sizing: border-box;
 }
