--- a/src/css/form.css
+++ b/src/css/form.css
@@ -126,5 +126,23 @@
     transform: translateY(-55%);
   }
   
+  .form-checkbox {
+    width: 19px;
+    height: 19px;
+    margin: 0;
+    
+    border: 1px solid transparent;
+    
+    box-sizing: border-box;
+    appearance: none;
+  }
+  .form-checkbox:checked {
+    background-color: rgb(206, 229, 252);
+    border-color: rgb(100, 165, 230);
+    background-image: url(../assets/global/checkmark.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 12px;
+  }
   
 }
