- added zooming canvas in and out using ctrl + mouse wheel   - changed names of some arguments in usePointerTrack   - usePointerTrack now supports tracking without press - added basic support for brush indicators (currently only eraser (implemented now using canvas was with use of a div
))

--- a/src/components/Canvas/Canvas.module.css
+++ b/src/components/Canvas/Canvas.module.css
@@ -14,6 +14,11 @@
   box-shadow: 5px 5px 2px rgba(100, 100, 100, 0.2);
 }
 
+.canvas--brush {
+  pointer-events: none;
+  overflow: hidden;
+}
+
 .canvas--selection {
   border: 1px dashed rgb(0, 0, 0);
 
@@ -55,17 +60,6 @@
   cursor: none;
 }
 
-.eraser-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  
-  width: 100%;
-  height: 100%;
-
-  pointer-events: none;
-  overflow: hidden;
-}
 
 .eraser {
   position: absolute;
