- moved some of history functions to ActionsContext so selection can get cancelled when user goes to point in the history   - history buttons (and othe QuickAccessToolbar buttons) are now properly disabled when they should   - QuickAccessToolbar buttons that were missing onClick actions now have them

--- a/src/css/button.css
+++ b/src/css/button.css
@@ -41,6 +41,9 @@
   .button:disabled * {
     filter: opacity(50%);
   }
+  .button--disabled-grayscale:disabled * {
+    filter: opacity(50%) grayscale(100%);
+  }
   .button.button:disabled {
     background-color: transparent;
     border-color: transparent;
