- removed crashes / error messages caused by changing history when resizing / moving selection   - buttons now use --disabled class instead of attribute, because bubbling doesn't happen on disabled form elements     in firefox, causing native context menu to be opened

--- a/src/components/FileDropdownMore/FileDropdownMore.module.css
+++ b/src/components/FileDropdownMore/FileDropdownMore.module.css
@@ -32,10 +32,10 @@
   background-color: rgb(233, 240, 248);
   border-color: rgb(165, 207, 249);
 }
-.button:disabled * {
+.button--disabled * {
   filter: opacity(0.5);
 }
-.button:disabled:hover {
+.button--disabled:hover {
   background-color: transparent;
   border-color: transparent;
 }
