--- a/src/css/button.css
+++ b/src/css/button.css
@@ -38,13 +38,13 @@
     background-color: rgb(201, 224, 247);
     border-color: rgb(98, 162, 228);
   }
-  .button:disabled * {
+  .button--disabled * {
     filter: opacity(50%);
   }
-  .button--disabled-grayscale:disabled * {
+  .button--disabled.button--disabled-grayscale * {
     filter: opacity(50%) grayscale(100%);
   }
-  .button.button:disabled {
+  .button.button.button--disabled {
     background-color: transparent;
     border-color: transparent;
   }
