- removed toggleBoolState and unnecessary calls to it, as most actions now listen for click event     instead of pointerdown event, making toggleBoolState redundant (it was preventing dropdowns from being closed immediately     by useOutsideClick)   - improvements to ZoomRange   - changed names of some functions in utils.js   - moved getAverage form utils to seperate file and added tests to it, will do the same with the rest functions in utils later

--- a/src/components/ZoomRange/ZoomRange.module.css
+++ b/src/components/ZoomRange/ZoomRange.module.css
@@ -48,7 +48,7 @@
 .range-control:hover {
   --range-control-bg: rgb(23, 23, 23);
 }
-.range-control:active {
+.range-control.range-control--active {
   --range-control-bg: rgb(204, 204, 204);
 }
 
