- changed border on selection canvas to outline, so it doesn't feel jumpy anymore - useFreeForm selection now makes use of MutationObserver instead of setTimeout, this change will come in a couple more places

--- a/src/components/Canvas/Canvas.module.css
+++ b/src/components/Canvas/Canvas.module.css
@@ -20,12 +20,12 @@
 }
 
 .canvas--selection {
-  border: 1px dashed rgb(0, 0, 0);
+  outline: 1px dashed rgb(0, 0, 0);
 
   box-sizing: border-box;
 }
 .canvas--selection--ready {
-  border-color: rgb(0, 120, 215);
+  outline-color: rgb(0, 120, 215);
 }
 
 .canvas--grid-lines {
