- FreeFormSelection is now time limited, because if it's area was too big, crash was guaranteed   - changes to useOutsideClick (accepts object instead of arguments, has new option to run callback on Escape key press)   - dropdowns now get closed when escape key is pressed   - focusing element within main window with tab now makes main window focused, fixing dropdowns not opening   - disabled elements are now not focusable

--- a/src/components/FileDropdown/FileDropdown.module.css
+++ b/src/components/FileDropdown/FileDropdown.module.css
@@ -75,7 +75,7 @@
   background-color: rgb(234, 244, 252);
   border-color: rgb(168, 210, 253);
 }
-.button:disabled * {
+.button.button--disabled * {
   filter: opacity(0.5);
 }
 .button--disabled:hover {
@@ -105,7 +105,7 @@
   background-color: rgb(234, 244, 252);
   border-color: rgb(168, 210, 253);
 }
-.arrow-button:disabled * {
+.arrow-button.arrow-button--disabled * {
   filter: opacity(0.5);
 }
 
