- outline no logner renders when creating shape, so it looks more like real paint   - fixed bug in useRectangularSelection (was writing bigger canvas to selection than actual selection size when mouse was moving fast)

--- a/src/components/Canvas/Canvas.module.css
+++ b/src/components/Canvas/Canvas.module.css
@@ -24,6 +24,9 @@
 
   box-sizing: border-box;
 }
+.canvas--selection--shape {
+  outline-color: transparent;
+}
 .canvas--selection--ready {
   outline-color: rgb(0, 120, 215);
 }
